Finished all placements
Every page is laid out properly. Now optimization and getting the nav bar to work properly will be the next thing.

--- a/Mid-fi.html
+++ b/Mid-fi.html
@@ -164,29 +164,29 @@
           </a>
 
           <a class="navbar_items">
-            <button>Coffee Mockup</button>
+            <button>Angels</button>
           </a>
         </div>
 
         <div class="box two">
           <a class="navbar_items">
-            <button>Project Fire</button>
+            <button>Student Life</button>
           </a>
 
           <a class="navbar_items">
-            <button>Vigilance</button>
+            <button>James Webb</button>
           </a>
 
           <a class="navbar_items">
-            <button>Project Arroyo</button>
-          </a>
-
-          <a class="navbar_items">
-            <button>Children of the Tree</button>
+            <button>Total Recall</button>
           </a>
 
           <a class="navbar_items">
             <button>Coffee Mockup</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Yuko Shimizu</button>
           </a>
         </div>
 
