--- a/aboutPage.html
+++ b/aboutPage.html
@@ -9,53 +9,116 @@
   </head>
 
   <body>
-    <a id="backButton">
-        <button>Back</button>
+    <a id="reset">About</a>
+    <a href="Mid-fi.html">
+        <h2>Go Back</h2>
+    </a>
+    <div id="project_viewerport">
+      <div id="project-scroll-container">
+
+        <div class="box one">
+            <img class="project_thumbnail" src="./images/Monster.png" alt="Me">
+            <section class="project_description">
+                <h3 class="descriptionTitle">Harlen Bertrand</h3>
+                <h5 class="blackText">Well, what can I say that you haven't heard in a billion of other artist/designer
+                    portfolio websites? I draw and I paint to make my ideas a reality mostly. But,
+                    I also take some other avenues of creation such as music, writing, voice acting,
+                    and even game creation!
+                </h5>
+
+                <h5 class="blackText">I was born in Fort Nelson, BC. A small little town in the middle of the forest
+                    in northern British Columbia. I grew up always knowing video games and
+                    eventually I was introduced to my first love, art. Ever since then,
+                    Art and I have a rather spotty relationship; only recently we became a rather
+                    serious bunch. And, eventually, I also found that I liked to create video games
+                    when I was introduced to Unity. So much so, that I went as far as designing
+                    an entire world for a hypothetical video game that I work on in my spare time.
+                </h5>
+
+                <h5 class="blackText">I like to live vicariously through my characters and the worlds that I create. 
+                    Imagining incredible adventures and impossible sights is what I see when I close my eyes.
+                </h5>
+
+                <h5 class="blackText">But, other than that, some of the things I like to do besides art and video games
+                    are playing the piano, riding my motorcycle when it's a nice day, and camping
+                    when I have more than an hour of free time.
+                </h5>
+
+                <h5 class="blackText">But, I'm sure you're bored to death about me talking about myself, so how about
+                    we talk about you? Let's get in touch here at my email.
+                </h5>
+
+                <h5 class="blackText">
+                    I hope to hear from you and hope you have a wonderful day!
+                </h5>
+            </section>
+        </div>
+
+      </div>
+    </div>
+
+    <div id="nav_bar">
+      <div id="nav-scroll-container">
+
+        <div class="box one">
+          <a class="navbar_items">
+            <button>Project Fire</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Vigilance</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Project Arroyo</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Children of the Tree</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Angels</button>
+          </a>
+        </div>
+
+        <div class="box two">
+          <a class="navbar_items">
+            <button>Student Life</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>James Webb</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Total Recall</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Coffee Mockup</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Yuko Shimizu</button>
+          </a>
+        </div>
+
+      </div>
+    </div>
+
+    <div id="externalLinks">
+      <button onclick="window.location.href='https://www.linkedin.com/in/harlen-bertrand-734942210/';"
+        id="linked" type="submit"></button>
+        <button onclick="window.location.href='https://www.instagram.com/monstrous.creations/';"
+        id="insta" type="submit"></button>
+        <button onclick="window.location.href='https://xmonster1.artstation.com/';"
+        id="art" type="submit"></button>
+    </div>
+
+    <a href="mailto:harlenbertrand@outlook.com">
+      <button id="contact">Contact</button>
     </a>
 
-    <a id="reset">About</a>
-
-    <h3>
-        Harlen Bertrand
-    </h3>
-
-    <img class="project_thumbnail" src="" alt="Me">
-
-    <p>
-        Well, what can I say that you haven't heard in a billion of other artist/designer
-        portfolio websites? I draw and I paint to make my ideas a reality mostly. But,
-        I also take some other avenues of creation such as music, writing, voice acting,
-        and even game creation!
-    </p>
-
-    <p>
-        I was born in Fort Nelson, BC. A small little town in the middle of the forest
-        in northern British Columbia. I grew up always knowing video games and
-        eventually I was introduced to my first love, art. Ever since then,
-        Art and I have a rather spotty relationship; only recently we became a rather
-        serious bunch. And, eventually, I also found that I liked to create video games
-        when I was introduced to Unity. So much so, that I went as far as designing
-        an entire world for a hypothetical video game that I work on in my spare time.
-    </p>
-
-    <p>
-        I like to vicariously through my characters and worlds that I create. Imagining
-        incredible adventures and impossible sights is what I see when I close my eyes.
-    </p>
-
-    <p>
-        But, other than that, some of the things I like to do besides art and video games
-        are playing the piano, riding my motorcycle when it's a nice day, and camping
-        when I have more than an hour of free time.
-    </p>
-
-    <p>
-        But, I'm sure you're bored to death about me talking about myself, so how about
-        we talk about you? Let's get in touch here at my email.
-    </p>
-
-    <p>
-        I hope to hear from you and hope you have a wonderful day!
-    </p>
   </body>
 </html>
