--- a/projectFire_page.html
+++ b/projectFire_page.html
@@ -5,55 +5,154 @@
     <title>Project Fire</title>
     <meta name="description" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./styles/project_style.css">
   </head>
 
   <body>
-    <a>
-        <button>Back</button>
-    </a>
-
     <a id="reset">Project Fire</a>
-    
-    <h3>
-        About
-    </h3>
+    <a href="Mid-fi.html">
+        <h2>Go Back</h2>
+    </a>
+    <div id="project_viewerport">
+      <div id="project-scroll-container">
 
-    <p>
-        Brought about by the way of a D&D Game, Project Fire started as the backstory
-        of a character I made for a D&D session I had one day during my early years
-        in University. Afterwards, when the group dissolved and the sessions grew
-        to be nothing but a memory I still kept on with developing the story. Growing
-        it, creating characters, environments, and lore to fully realize what I saw that
-        day while I sat in the basement of one of my classmates.
-    </p>
+        <div class="box one">
+            <img class="project_thumbnail" src="./images/harlen-bertrand-runequest.jpg" alt="Runequest">
+            <section class="project_description">
+                <h3 class="descriptionTitle">Conception</h3>
+                <h5 class="blackText">Project Fire, as I mentioned on the thumbnail, started out from an
+                    idea I had for a Dungeons and Dragons character backstory. Tearyn Grimwald was a prince
+                    who had run away from home in order to find an escape from his boring life as a prince.
+                    Only to find that the world was a lot more dangerous than what he would read in his books.
+                </h5>
 
-    <h3>
-        Title
-    </h3>
-    <img src="" alt="">
+                <h5 class="blackText">Featured is the original drawing I did of our groups characters and the
+                    jumping off point of what is to become Prince Tearyn and the first character of Project
+                    Fire.
+                </h5>
 
-    <p>
-        Eventually, I signed on for a university class that taught the fundamentals of
-        game design and production using the Unity Engine. I knew I had to develop a story
-        world for this hypothetical game so I chose the story for my character, a man named
-        Tearyn Grimwald, as a basis for the story. Over time, as I spent time within the
-        world of Tearyn I started to see who he was, the characters he knew, and the world
-        he lived in.
-    </p>
+                <h5 class="blackText">The original sketch of Prince Tearyn is the second one from the left.
+                    At the time, he was an archer and hunter who resorted to the life of an assasin to make
+                    ends meet.
+                </h5>
+            </section>
+        </div>
 
-    <h3>
-        Title
-    </h3>
-    <img src="" alt="">
+        <div class="box two">
+            <img class="project_thumbnail_left" src="./images/Queen_Prince.png" alt="RoyalPortrait">
+            <section class="project_description_right">
+                <h5 class="blackText">As time went on and I had more time to really think about who Prince
+                    Tearyn was, I figured that since he's a prince that he should have King and Queen as
+                    parents. However, even in those early stages, Prince Tearyn only had his mother. Queen
+                    Liarie Grimwald. So, with that being said, Prince Tearyn never did have a father
+                    throughout the time I spent with him.
+                </h5>
 
-    <p>
-        I started to think of how I could show this to the world, so I decided to start utilizing
-        the skills I had picked up over the years. I delved into his world and tried my best to
-        depict what he saw through Digital Drawings, Videos, Music, and Character voices. what
-        you see here is a product of those ambitions I had while I spent time in the world
-        of Project Fire.
-    </p>
+                <h5 class="blackText">As time went on, eventually Tearyn Grimwald and Liarie Grimwald were
+                    renamed to Tearyn Fireheart and Liarie Fireheart respectively due to the ever developing
+                    story that I was forumulating.
+                </h5>
+
+                <h5 class="blackText">The featured image is their in-universe royal portrait. I took the
+                    the style of illustration from the presedential portraits that are featured in the
+                    Whitehouse along with inspiration from Baroque style portraits.
+                </h5>
+            </section>
+        </div>
+
+        <div class="box three">
+            <img class="project_thumbnail" src="./images/knight_sprite.png" alt="Sprite">
+            <section class="project_description">
+                <h3 class="descriptionTitle">The Knight</h3>
+                <h5 class="blackText">As the story slowly became more realized, the focus turned away from
+                    Prince Tearyn and on to a new character. The Knight. This was the turning point in this
+                    story where it shifted from being a story for an obscure Dungeons & Dragons character
+                    to a story for a fully realized game. 
+                </h5>
+
+                <h5 class="blackText">Featured is the original sprite that was created for the Knight before
+                    he was fully realized and before a female variant was made as well. This sprite was used
+                    ingame as a testing element for some game mechanics that I had been working on.
+                </h5>
+
+                <h5 class="blackText">As the story developed, the characters eventually developed a style in
+                    terms of clothing, culture, and even a way of speaking. All of which is currently being
+                    worked on in the Unity game creation engine. To see a preview of the ingame build, scroll
+                    to the bottom.
+                </h5>
+            </section>
+        </div>
+
+        <div class="box four">
+            <img class="project_thumbnail" src="./images/male_Knight.png" alt="Male Knight">
+            <img class="project_thumbnail_left" src="./images/female_Knight.png" alt="Female Knight">
+        </div>
+
+      </div>
+    </div>
+
+    <div id="nav_bar">
+      <div id="nav-scroll-container">
+
+        <div class="box one">
+          <a class="navbar_items">
+            <button>Project Fire</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Vigilance</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Project Arroyo</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Children of the Tree</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Angels</button>
+          </a>
+        </div>
+
+        <div class="box two">
+          <a class="navbar_items">
+            <button>Student Life</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>James Webb</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Total Recall</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Coffee Mockup</button>
+          </a>
+
+          <a class="navbar_items">
+            <button>Yuko Shimizu</button>
+          </a>
+        </div>
+
+      </div>
+    </div>
+
+    <div id="externalLinks">
+      <button onclick="window.location.href='https://www.linkedin.com/in/harlen-bertrand-734942210/';"
+        id="linked" type="submit"></button>
+        <button onclick="window.location.href='https://www.instagram.com/monstrous.creations/';"
+        id="insta" type="submit"></button>
+        <button onclick="window.location.href='https://xmonster1.artstation.com/';"
+        id="art" type="submit"></button>
+    </div>
+
+    <a href="mailto:harlenbertrand@outlook.com">
+      <button id="contact">Contact</button>
+    </a>
 
   </body>
 </html>
